--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250107</version>
+        </dependency>
 
         <!-- Mockito Inline for Mocking Final/Static Methods -->
         <dependency>
